--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </tr>
             <tr>
                 <td>css task1</td>
-                <td><a href="./css tasks/task1.html">css Task1 lin</a></td>
+                <td><a href="./CSS TASKS/task1.html">css Task1 lin</a></td>
             </tr>
             <tr>
                 <td>css task2</td>
