--- a/index.html
+++ b/index.html
@@ -83,31 +83,31 @@
             </tr>
             <tr>
                 <td>css task2</td>
-                <td><a href="./css tasks/task2.html">css Task2 lin</a></td>
+                <td><a href="./CSS TASKS/task2.html">css Task2 lin</a></td>
             </tr>
             <tr>
                 <td>css task3</td>
-                <td><a href="./css tasks/task3.html">css Task3 lin</a></td>
+                <td><a href="./CSS TASKS/task3.html">css Task3 lin</a></td>
             </tr>
             <tr>
                 <td>css Task4</td>
-                <td><a href="./css tasks/task4.html">css Task4 lin</a></td>
+                <td><a href="./CSS TASKS/task4.html">css Task4 lin</a></td>
             </tr>
             <tr>
                 <td>css task5</td>
-                <td><a href="./css tasks/task5.html">css Task5 lin</a></td>
+                <td><a href="./CSS TASKS/task5.html">css Task5 lin</a></td>
             </tr>
             <tr>
                 <td>css task6</td>
-                <td><a href="./css tasks/task6.html">css Task6 lin</a></td>
+                <td><a href="./CSS TASKS/task6.html">css Task6 lin</a></td>
             </tr>
             <tr>
                 <td>css task7</td>
-                <td><a href="./css tasks/task7.html">css Task7 lin</a></td>
+                <td><a href="./CSS TASKS/task7.html">css Task7 lin</a></td>
             </tr>
             <tr>
                 <td>css task8</td>
-                <td><a href="./css tasks/task8.html">css task8 lin</a></td>
+                <td><a href="./CSS TASKS/task8.html">css task8 lin</a></td>
             </tr>
            
 
